--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <span class="site-title">
-      <a class="page-link" href="{{ site.baseurl | prepend: site.url }}/">{{ site.name }}</a>
+      <a class="page-link" href="{{ '/VNIV-fall-2025/' | relative_url }}">{{ site.name }}</a>
     </span>
 
     <nav class="site-nav">
@@ -19,16 +19,16 @@
         </label>
 
       <div class="trigger">
-        <a class="page-link" href="{{ '/logistics/' | relative_url }}">logistics</a>
-        <a class="page-link" href="{{ '/lectures/' | relative_url }}">lectures</a>
-        <a class="page-link" href="{{ '/notes/' | relative_url }}">notes</a>
-        <a class="page-link" href="{{ '/calendar/' | relative_url }}">calendar</a>
-        <a class="page-link" href="{{ '/homework/' | relative_url }}">homework</a>
-        <a class="page-link" href="{{ '/project/' | relative_url }}">project</a>
-        <a class="page-link" href="{{ '/reports/' | relative_url }}">reports</a>
+        <a class="page-link" href="{{ '/VNIV-fall-2025/logistics/' | relative_url }}">logistics</a>
+        <a class="page-link" href="{{ '/VNIV-fall-2025/lectures/' | relative_url }}">lectures</a>
+        <!-- <a class="page-link" href="{{ '/VNIV-fall-2025/notes/' | relative_url }}">notes</a> -->
+        <!-- <a class="page-link" href="{{ '/VNIV-fall-2025/calendar/' | relative_url }}">calendar</a> -->
+        <!-- <a class="page-link" href="{{ '/VNIV-fall-2025/homework/' | relative_url }}">homework</a> -->
+        <a class="page-link" href="{{ '/VNIV-fall-2025/project/' | relative_url }}">project</a>
+        <!-- <a class="page-link" href="{{ '/VNIV-fall-2025/reports/' | relative_url }}">reports</a> -->
       </div>
     </nav>
 
   </div>
 
-</header>
+</header> 
